--- a/main.tex
+++ b/main.tex
@@ -48,33 +48,15 @@ The instruction set features 17 registers in total. Each register has a size of 
 \subsection{Instructions}
 \begin{table}[h!]
 \centering
-\begin{tabular} { | p{2cm} | | p{2cm} | p{3cm} | | p{3cm} | | p{3cm}| | p{3cm} |}
+\begin{tabular} { | p{2cm} | | p{2cm} | p{2cm} |}
   \hline
-  \multicolumn{6}{|c|}{LQ}\\
+  \multicolumn{3}{|c|}{MOVRR}\\
   \hline
-  32-25 & 24-21 & 20-17 & 16-13 & 12-9 & 8-1\\
+  Opcode & Destination & Source\\
   \hline
-  Opcode & Operand & First argument & Second Argument & Third argument & N/A\\
-  00000000 & 0100 & Destination register & Second Argument & Third argument & N/A\\
-  \hline
-\end{tabular}
-\caption{Instruction encoding}
-\end{table}
-
-\subsubsection{Instruction encoding}
-Each instruction is 32 bit wide, the cpu works with registers, so for each instruction 2 or more registers are passed to specify the values.
-\begin{table}[h!]
-\centering
-\begin{tabular} { | p{2cm} | | p{2cm} | p{3cm} | | p{3cm} | | p{3cm}| | p{3cm} |}
-  \hline
-  \multicolumn{6}{|c|}{Instruction}\\
-  \hline
-  32-25 & 24-21 & 20-17 & 16-13 & 12-9 & 8-1\\
-  \hline
-  Opcode & Operand & First argument & Second Argument & Third argument & N/A\\
+  00000000 & register & register\\
   \hline
 \end{tabular}
-\caption{Instruction encoding}
 \end{table}
 
 \end{document}
