--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@ The instruction set features 17 registers in total. Each register has a size of 
   00000000 & register & register\\
   \hline
 \end{tabular}
+\caption{Moves \textit{source} into \textit{destination}}
 \end{table}
 
 
